# specthis

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
journal/: 2026-07-02-remote-compute-ledger-chicken-and-egg.md
specs/: bindings.toml  remote-bytes.md
src/specthis/: __init__.py  audit.py  cache.py  check.py  cli.py  dag.py  export.py  hashing.py  icons.py  install.py  journal.py  ledger.py  lock.py  parse.py  preview.py  refresh.py  remote.py  routing.py  serve.py  timefmt.py
src/specthis/templates/agents/: experiment-runner.md  spec-auditor.md  spec-critic.md  spec-implementer.md
src/specthis/templates/commands/: specthis-journal.md  specthis-lint.md  specthis-run.md  specthis-vouch.md
src/specthis/templates/specs/: AGENTS.md  README.md
tests/: conftest.py  test_cache.py  test_check.py  test_cli.py  test_dag.py  test_export_serve.py  test_hashing.py  test_install.py  test_journal.py  test_ledger.py  test_library.py  test_lint.py  test_parse.py  test_preview.py  test_remote.py  test_routing.py  test_skip.py  test_timefmt.py
