[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specthis"
version = "0.0.1"
description = "Spec-driven research workflow: a dashboard, Claude Code subagents, and a refresh/cache pipeline for reproducible compute + LaTeX reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Thibaut Lamadon" },
]
keywords = ["specs", "research", "reproducibility", "claude-code", "latex", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "markdown>=3.5",
]

[project.optional-dependencies]
s3 = ["boto3>=1.28"]
serve = ["uvicorn>=0.27", "starlette>=0.36"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/tlamadon/specthis"
Repository = "https://github.com/tlamadon/specthis"
Issues = "https://github.com/tlamadon/specthis/issues"

[project.scripts]
specthis = "specthis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/specthis"]

[tool.hatch.build.targets.wheel.force-include]
"src/specthis/templates" = "specthis/templates"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
