[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specthis"
version = "0.0.30"
description = "A notary for a research pipeline DAG: specs promise, code delivers, artifacts are receipts — one git-versioned ledger says which claims still hold and whether repair needs a mind, a machine, or patience."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Thibaut Lamadon" },
]
keywords = ["specs", "research", "reproducibility", "claude-code", "latex", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "markdown>=3.5",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
s3 = ["boto3>=1.28"]
serve = ["uvicorn>=0.27", "starlette>=0.36"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/tlamadon/specthis"
Repository = "https://github.com/tlamadon/specthis"
Issues = "https://github.com/tlamadon/specthis/issues"

[project.scripts]
specthis = "specthis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/specthis"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
